<resources>
    <string name="app_name">Restaurants</string>
    <!-- Strings used for fragments for navigation -->
    // login page
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hint">Mobile Number</string>
    <string name="login_with">Or Login With</string>
    <string name="send_otp">Send OTP</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="skip">Skip</string>

    // opt page
    <string name="send_otp_msg">We have send OTP to your Mobile number</string>
    <string name="check_msg">Please check your mobile number 088*****62\n continue</string>
    <string name="btn_next">Next</string>
    <string name="dont_msg">Don`t Receive?</string>
    <string name="resend">Resend</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>


    //cart page
    <string name="heading">My Cart</string>
    <string name="imgName">Kadhai Chole |</string>
    <string name="restaurants_name">Wooed Restaurants |</string>
    <string name="km"> 1.5 Km</string>
    <string name="price">$15</string>
    <string name="per_plate">/Per Plate</string>
    <string name="cancel">Cancel</string>
    <string name="view_details">View Details</string>

    //offers pages
    <string name="location_name">Jaipur Rajasthan...</string>
    <string name="restaurants_name1">Search Restaurants,Food...</string>
    <string name="food">Food</string>
    <string name="offer">Flat 50% OFF</string>
    <string name="on_offer">On Food Orders</string>
    <string name="order_now">ORDER NOW</string>
    <string name="search_restaurant">Search Restaurants</string>

    //left menu
    <string name="name">Rk shyopuria</string>
    <string name="gmail">username@gmail.com</string>


    // your order page
    <string name="Order_details">Order Details</string>
    <string name="whiskey_burger">Whiskey King Burger | </string>
    <string name="whiskey_Ice">Whiskey King Ice Cream | </string>
    <string name="whiskey_pizza">Whiskey King pizza | </string>
    <string name="x5">X5</string>
    <string name="price_burger">$60</string>
    <string name="delivery_instructions">Delivery instructions</string>
    <string name="add_note">_ Add Note</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery_cost">Delivery Coast</string>
    <string name="tax">Tax</string>
    <string name="grand_total">Grand Total</string>
    <string name="checkout">Checkout</string>
    <string name="planet_grapes">Planet of the Grapes</string>
    <string name="tag_line">Tag line</string>
    <string name="pin">Jaipur Rj,320015 |</string>
    <string name="star_ratting">4 Star Ratting</string>
    <string name="products">View All Products</string>
    <string name="profile">Profile</string>
    <string name="userName">Manoj prajapat</string>
    <string name="gmail2">manojprajapat882440@gmail.com</string>
    <string name="userDetails">User Details</string>
    <string name="payment">Payment</string>
    <string name="contact">Contact</string>
    <string name="logout">Logout</string>
    <string name="notification">Notification</string>
    <string name="headingNotification">Lorem ipsum</string>
    <string name="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.  Modi fugiat quidem aut et dignissimos</string>


    <string name="planet_of_the_grapes">Planet of the Grapes</string>
    <string name="tag_line_1_5_km">Tag line |</string>
    <string name="all">All</string>
    <string name="pizza">Pizza</string>
    <string name="sandwich">Sandwich</string>
    <string name="cookie">Cookie</string>
    <string name="ice_creams">Ice-creams</string>
    <string name="cold_coffee">Cold-coffee</string>
    <string name="total_price">Total Price</string>
    <string name="dollar_180">$180</string>
    <string name="add_cart">Add Cart</string>
    <string name="whiskey_king_burger">Whiskey king Burger</string>
    <string name="price_180">$180</string>
    <string name="title_activity_maps">Google maps</string>

    <!--    <string name="google_maps_key" translatable="false">YOUR_API_KEY_HERE</string>-->


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_maps2">MapsActivity2</string>

    <!--    <string name="app_name">Restaurants</string>-->
    <!--    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">YOUR_API_KEY_HERE</string>-->

</resources>

